--- a/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-package/ba-manage-package-edit/ba-manage-package-edit.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-package/ba-manage-package-edit/ba-manage-package-edit.component.html
@@ -3,7 +3,7 @@
   <div class="accordion" id="package-list">
 
     <!-- Accordion item -->
-    <div class="accordion-item mb-2" *ngFor="let itemPackage of itemPackages;let i = index"
+    <div class="accordion-item mb-2" *ngFor="let packageItem of packageItems;let i = index"
          [ngStyle]="{'margin-top':i>0 ? '30px':'0px'}">
       <div class="accordion-header" id="">
         <div class="card bg-position-center border-0 overflow-hidden"
@@ -20,26 +20,26 @@
               <div class="d-sm-flex justify-content-between align-items-end">
                 <a class="text-decoration-none text-light pe-2">
                   <!-- <div class="fs-sm text-uppercase pt-2 mb-1">Available</div> -->
-                  <h3 class="h5 text-light mb-1">{{itemPackage.name}}</h3>
+                  <h3 class="h5 text-light mb-1">{{packageItem.itemPackage.name}}</h3>
                   <div class="fs-sm opacity-70">
                     <i class="fi-bookmark me-1"></i>
-                    {{itemPackage.description}}
+                    {{packageItem.itemPackage.description}}
                   </div>
                 </a>
                 <div class="btn-group ms-n2 ms-sm-5 mt-3 justify-content-end">
-                  <a class="btn btn-primary px-3">LKR {{itemPackage.discountedPrice | number:'.2-2'}}</a>
+                  <a class="btn btn-primary px-3">LKR {{packageItem.itemPackage.discountedPrice | number:'.2-2'}}</a>
                   <button id="btnPackage{{i}}"
                           class="btnView btn btn-primary btn-icon border-end-0 border-top-0 border-bottom-0 border-light fs-sm"
                           type="button" data-bs-toggle="collapse" [attr.data-bs-target]="'#package' + i"
                           aria-expanded="true"
-                          aria-controls="packageOne" value="{{itemPackage.itemPackageId}}">
+                          aria-controls="packageOne" value="{{packageItem.itemPackage.itemPackageId}}">
                     <i class="fi-eye-on"></i>
                   </button>
                   <button
                     class="btnEdit btn btn-primary btn-icon border-end-0 border-top-0 border-bottom-0 border-light fs-sm"
                     type="button" data-bs-toggle="collapse" [attr.data-bs-target]="'#packageEdit' + i"
                     aria-expanded="true"
-                    aria-controls="packageOneEdit" value="{{itemPackage.itemPackageId}}">
+                    aria-controls="packageOneEdit" value="{{packageItem.itemPackage.itemPackageId}}">
                     <i class="fi-edit"></i>
                   </button>
                   <!-- <button type="button" class="btn btn-primary btn-icon border-end-0 border-top-0 border-bottom-0 border-light fs-sm">
@@ -63,7 +63,7 @@
               <!--<img src="../../../../assets/img/catalog/02.jpg" alt="Image" style="height: 350px;">-->
               <!--<img src="../../../../assets/img/catalog/07.jpg" alt="Image" style="height: 350px;">-->
               <mdb-carousel class="carousel slide carousel-fade" [animation]="'fade'">
-                <mdb-carousel-item *ngFor="let image of itemPackage.itemPackageImgs">
+                <mdb-carousel-item *ngFor="let image of packageItem.itemPackage.itemPackageImages">
                   <span style="height: 100%;width: 100%;background-color: rgba(0,0,0,0.25);position: absolute"></span>
                   <img style="max-height:350px;height: 350px" class="d-block w-100" [src]="getPackageImageSrc(image)"
                        alt="First slide">
@@ -96,7 +96,7 @@
            id="packageEdit{{i}}">
         <div class="card card-body">
           <form #baManageFormPackageE="ngForm"
-                (ngSubmit)="baManageFormPackageE.form.valid && (itemPackage.itemPkgImgs.length+itemPackage.itemPackageImgs.length)>=3 && onSubmit(itemPackage,imageInput,i)"
+                (ngSubmit)="baManageFormPackageE.form.valid && (packageItem.itemPkgImgs.length+packageItem.itemPackage.itemPackageImages.length)>=3 && onSubmit(itemPackage,imageInput,i)"
                 novalidate>
 
             <div class="row">
@@ -113,7 +113,7 @@
                   type="text"
                   id="validationTooltipp1"
                   placeholder="Package name"
-                  [(ngModel)]="itemPackage.name" #packageNameE="ngModel" name="packageName"
+                  [(ngModel)]="packageItem.itemPackage.name" #packageNameE="ngModel" name="packageName"
                   required
                 />
                 <div *ngIf="(packageNameE.touched || baManageFormPackageE.submitted) && packageNameE.errors?.required"
@@ -136,7 +136,7 @@
                   id="validationTooltip02"
                   min="1"
                   required
-                  [(ngModel)]="itemPackage.quantity" #packageQtyE="ngModel" name="packageQtyE"
+                  [(ngModel)]="packageItem.itemPackage.quantity" #packageQtyE="ngModel" name="packageQtyE"
                 />
                 <div *ngIf="(packageQtyE.touched || baManageFormPackageE.submitted) && packageQtyE.errors?.required"
                      class="validErr">
@@ -148,7 +148,7 @@
                 <label>
                   Make To Order
                   <input type="checkbox" name="makeToOrder" style="margin-left: 5px; transform: scale(1.4)"
-                         [(ngModel)]="itemPackage.makeToOrder">
+                         [(ngModel)]="packageItem.itemPackage.makeToOrder">
                 </label>
               </div>
             </div>
@@ -165,7 +165,7 @@
                 <select
                   class="form-select"
                   id="validationTooltipp2"
-                  [(ngModel)]="itemPackage.discountType" #discountTypeE="ngModel" name="discountType"
+                  [(ngModel)]="packageItem.itemPackage.discountType" #discountTypeE="ngModel" name="discountType"
                 >
                   <option value="None">None</option>
                   <option value="Cash">Cash</option>
@@ -177,7 +177,7 @@
                 <!--</div>-->
                 <div class="valid-tooltip">Looks good!</div>
               </div>
-              <div class="col-md-4 mb-3" *ngIf="itemPackage.discountType!=='None'">
+              <div class="col-md-4 mb-3" *ngIf="packageItem.itemPackage.discountType!=='None'">
                 <label class="form-label" for="validationTooltipp3"
                 >Discount</label
                 >
@@ -192,7 +192,7 @@
                   type="number"
                   id="validationTooltipp3"
                   placeholder="Discount"
-                  [(ngModel)]="itemPackage.discount" #discountE="ngModel" name="discount"
+                  [(ngModel)]="packageItem.itemPackage.discount" #discountE="ngModel" name="discount"
                   required
                 />
                 <div *ngIf="(discountE.touched || baManageFormPackageE.submitted) && discountE.errors?.required"
@@ -220,7 +220,7 @@
                 <div class="input-group">
                   <span class="input-group-text fs-lg py-1">LKR</span>
                   <input type="number" class="form-control" id="validationTooltipp3" placeholder="Amount" required
-                         [(ngModel)]="itemPackage.price" #priceE="ngModel" name="price">
+                         [(ngModel)]="packageItem.itemPackage.price" #priceE="ngModel" name="price">
                   <!--<span class="input-group-text">.00</span>-->
                   <!--<div class="invalid-tooltip">-->
                   <!--Please enter itemPackage price-->
@@ -254,8 +254,8 @@
                   [searchWhileComposing]="true"
                   name="businessProfileCategories"
                   #businessProfileCategoriesE="ngModel" required
-                  (change)="getItems(itemPackage.businessProfileCategory.businessCategory.businessCategoryId,itemPackage);getItemPackageFeatures(itemPackage.businessProfileCategory.businessCategory.businessCategoryId)"
-                  [(ngModel)]="itemPackage.businessProfileCategory.businessCategory">
+                  (change)="getItems(packageItem.itemPackage.businessProfileCategory.businessCategory.businessCategoryId,itemPackage);getItemPackageFeatures(packageItem.itemPackage.businessProfileCategory.businessCategory.businessCategoryId)"
+                  [(ngModel)]="packageItem.itemPackage.businessProfileCategory.businessCategory">
                 </ng-select>
                 <div
                   *ngIf="(businessProfileCategoriesE.touched || baManageFormPackageE.submitted) && businessProfileCategoriesE.errors?.required"
@@ -299,12 +299,12 @@
                         [searchWhileComposing]="true"
                         name="items"
                         #itemsE="ngModel" required
-                        [(ngModel)]="itemPackage.itemItemPackages"
+                        [(ngModel)]="packageItem.packageItemItems"
                         style="width: 100%">
                       </ng-select>
                     </div>
                     <div
-                      *ngIf="(baManageFormPackageE.submitted) && itemPackage.itemItemPackages.length===0"
+                      *ngIf="(baManageFormPackageE.submitted) && itemPackage.packageItemItems.length===0"
                       class="validErr">
                       Item is required
                     </div>
@@ -367,7 +367,7 @@
                           [searchWhileComposing]="true"
                           name="iFeature"
                           #iFeature="ngModel" required
-                          [(ngModel)]="itemPackage.itemPackageItemPackageFeature"
+                          [(ngModel)]="packageItem.itemPackage.itemPackageItemPackageFeature"
                           style="width: 100%">
                         </ng-select>
                       </div>
@@ -395,9 +395,9 @@
             </div>
             <div class="row">
               <div class="d-flex flex-wrap mb-4">
-                <span *ngFor="let itemPackageFeature of itemPackage.itemPackageItemPackageFeatures;let j = index"
+                <span *ngFor="let itemPackageFeature of packageItem.itemPackage.itemPackageItemPackageFeatures;let j = index"
                       class="bg-success text-light fs-sm btn btn-xs opacity-100 rounded-pill me-2 mb-2 ms-1 mt-1">{{itemPackageFeature.itemPackageFeature.name}}
-                  <i class="fi-x fs-xs ms-2" (click)="itemPackage.itemPackageItemPackageFeatures.splice(i,1)"
+                  <i class="fi-x fs-xs ms-2" (click)="packageItem.itemPackage.itemPackageItemPackageFeatures.splice(i,1)"
                      style="cursor: pointer"></i>
                 </span>
               </div>
@@ -413,7 +413,7 @@
                    aria-label="Small description about your package."><i class="fi-help"></i>
                 </a>
                 <textarea class="form-control" id="validationTooltipp5" rows="5" placeholder="Description"
-                          [(ngModel)]="itemPackage.description" name="description"></textarea>
+                          [(ngModel)]="packageItem.itemPackage.description" name="description"></textarea>
                 <div class="invalid-tooltip">
                   Please write something about your package
                 </div>
@@ -445,17 +445,17 @@
                 <!--data-label-idle="&lt;div class=&quot;btn btn-primary mb-3&quot;&gt;&lt;i class=&quot;fi-cloud-upload me-1&quot;&gt;&lt;/i&gt;Upload photos&lt;/div&gt;&lt;br&gt;or drag them in">-->
               </div>
               <div
-                *ngIf="((itemPackage.itemPkgImgs.length+itemPackage.itemPackageImgs.length)<3 && baManageFormPackageE.submitted)"
+                *ngIf="((packageItem.itemPackage.itemImgsRaw.length+packageItem.itemPackage.itemPackageImages.length)<3 && baManageFormPackageE.submitted)"
                 class="validErr" style="margin-bottom: 10px">
                 Minimum 3 images are required
               </div>
-              <div class="col-md-4 mb-4" *ngFor='let itemPackageImage of itemPackage.itemPackageImgs;let j = index'>
+              <div class="col-md-4 mb-4" *ngFor='let itemPackageImage of packageItem.itemPackage.itemPackageImages;let j = index'>
                 <div style="position: relative" class="delImgT">
                   <img [src]="getImageSrc(itemPackageImage)" style="margin: 3px;height: 200px;width: 300px">
                   <span class="delImg">
                     <i class="fi-trash"
                        style="color: red;padding: 5px;background-color: white;border-radius: 10px;cursor: pointer;font-size: 25px;"
-                       (click)="itemPackage.itemPackageImgs.splice(j,1)"></i>
+                       (click)="packageItem.itemPackage.itemPackageImages.splice(j,1)"></i>
                   </span>
                 </div>
               </div>
@@ -466,7 +466,7 @@
                   class="form-check-input"
                   type="checkbox"
                   id="invalidCheckP"
-                  [(ngModel)]="itemPackage.isNewPackage"
+                  [(ngModel)]="packageItem.isNewPackage"
                   name="newPackage"
                   required
                 />
@@ -478,7 +478,7 @@
                 </div>
               </div>
             </div>
-            <button class="btn btn-primary btn-md" type="submit" [disabled]="!itemPackage.isNewPackage">
+            <button class="btn btn-primary btn-md" type="submit" [disabled]="!packageItem.isNewPackage">
               Save
             </button>
           </form>
@@ -494,21 +494,21 @@
           <div class="border-top border-light pt-0 mb-2">
             <div class="fw-bold" style="font-size: 21px;margin-top: 0px;margin-bottom: 15px">
               <i class="fi-cash mt-n1 me-2 lead align-middle opacity-70" style="font-size: 30px"></i>
-              <span *ngIf="itemPackage.discountType==='None'">LKR {{itemPackage.price | number:'.2-2'}}</span>
-              <span *ngIf="itemPackage.discountType!=='None'" style="text-decoration: line-through;color: red">LKR {{itemPackage.price | number:'.2-2'}}</span>
-              <span *ngIf="itemPackage.discountType!=='None'" style="margin-left: 10px">LKR {{itemPackage.discountedPrice | number:'.2-2'}}</span>
+              <span *ngIf="packageItem.itemPackage.discountType==='None'">LKR {{packageItem.itemPackage.price | number:'.2-2'}}</span>
+              <span *ngIf="packageItem.itemPackage.discountType!=='None'" style="text-decoration: line-through;color: red">LKR {{packageItem.itemPackage.price | number:'.2-2'}}</span>
+              <span *ngIf="packageItem.itemPackage.discountType!=='None'" style="margin-left: 10px">LKR {{packageItem.itemPackage.discountedPrice | number:'.2-2'}}</span>
             </div>
             <div class="row cols-sm-2 row-cols-md-12"
                  style="border-top: 1px solid #eaeaea;border-bottom: 1px solid #eaeaea;margin-top: 0px;margin-bottom: 20px">
               <div class="col" style="padding: 0px">
-                <div *ngIf="itemPackage.quantity>0" style="border-right: 1px solid #d3d3d3">
+                <div *ngIf="packageItem.itemPackage.quantity>0" style="border-right: 1px solid #d3d3d3">
                   <p class="mb-1 fs-sm" style="margin-top: 7px;color: #d48f03;font-weight: bold;text-align: center">
-                    {{itemPackage.makeToOrder?'Max':''}} Quantity
+                    {{packageItem.itemPackage.makeToOrder?'Max':''}} Quantity
                   </p>
                   <p class="mb-2 fs-sm fw-bold mx-2" style="text-align: center;color: #f29d00">
-                    {{itemPackage.quantity}}</p>
+                    {{packageItem.itemPackage.quantity}}</p>
                 </div>
-                <div *ngIf="itemPackage.quantity===0" style="border-right: 1px solid #d3d3d3;margin-top: 22px">
+                <div *ngIf="packageItem.itemPackage.quantity===0" style="border-right: 1px solid #d3d3d3;margin-top: 22px">
                   <p class="mb-2 fs-sm fw-bold mx-2"
                      style="text-align: center;">
                   <span style="color: #f24605;padding: 5px;border: 1px solid #f24605;border-radius: 10px">
@@ -521,9 +521,9 @@
                 <p class="mb-2 fs-sm" style="margin-top: 7px;color: #b94701;font-weight: bold;text-align: center">
                   Discount </p>
                 <p class="mb-2 fs-sm text-primary fw-bold" style="text-align: center">
-                  {{itemPackage.discountType==='None' ? 'N/A' :
-                  itemPackage.discountType==='Cash' ? ('LKR '+itemPackage.discount) :
-                  itemPackage.discountType==='Percentage' ? (itemPackage.discount + '%') : ''}}
+                  {{packageItem.itemPackage.discountType==='None' ? 'N/A' :
+                  packageItem.itemPackage.discountType==='Cash' ? ('LKR '+packageItem.itemPackage.discount) :
+                  packageItem.itemPackage.discountType==='Percentage' ? (packageItem.itemPackage.discount + '%') : ''}}
                 </p>
               </div>
             </div>
@@ -531,7 +531,7 @@
 
           <div>
             <p class="mb-2 fs-sm text-dark fw-bold">Features </p>
-            <span *ngFor="let itemPackageFeature of itemPackage.itemPackageItemPackageFeatures"
+            <span *ngFor="let itemPackageFeature of packageItem.itemPackage.itemPackageItemPackageFeatures"
                   class="bg-success text-light fs-sm btn btn-xs disabled opacity-100 rounded-pill me-2 mb-2 ms-1 mt-1"
                   style="margin-left: 10px">
               {{itemPackageFeature.itemPackageFeature.name}}
@@ -542,14 +542,14 @@
           <div class="row cols-md-12 mt-3">
             <p class="mb-2 fs-sm text-dark fw-bold">Overview </p>
             <div class="col">
-              <p class="mb-2 fs-sm text-muted">{{itemPackage.description}} </p>
+              <p class="mb-2 fs-sm text-muted">{{packageItem.itemPackage.description}} </p>
             </div>
           </div>
 
           <p class="mb-2 fs-sm text-dark fw-bold" style="margin-bottom: 10px;margin-top: 15px">
             Includes </p>
 
-          <app-ba-manage-item-view [items]="itemPackage.items"></app-ba-manage-item-view>
+          <app-ba-manage-item-view [items]="packageItem.items"></app-ba-manage-item-view>
 
         </div>
       </div>
